--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## log
 logging.level.home.timjoo.AuditingFilter=DEBUG
+logging.level.home.timjoo.SecurityChecker=DEBUG
 
 ## DB
 spring.datasource.url=jdbc:mysql://localhost:3306/msg?useSSL=false&useUnicode=true&characterEncoding=UTF-8
