--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 ## log
 logging.level.home.timjoo.AuditingFilter=DEBUG
 logging.level.home.timjoo.SecurityChecker=DEBUG
+logging.level.home.timjoo.MessageService=DEBUG
 
 ## DB
 spring.datasource.url=jdbc:mysql://localhost:3306/msg?useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=timjoo
 spring.datasource.password=!qwer234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.open-in-view=false
